# DataConsistencyChecker

./: .gitignore  CLAUDE.md  README_ANALYSIS.md  analyze_sales_data.py  main.py  pyproject.toml  sales_data_analysis_report.md  view_report.py
Output/: Data_consistency.html
